@@ -1,3 +1,8 @@
+2014-11-07  Martin Liska  <mliska@suse.cz>
+
+	PR ipa/63595
+	* g++.dg/ipa/pr63595.C: New test.
+
 2014-11-07  Richard Biener  <rguenther@suse.de>
 
 	PR middle-end/63770
